--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span> <a routerLink="/">My Posts</a></span>
+  <span> <a routerLink="/">Starter Project</a></span>
   <span class="spacer"></span>
 
   <ul>
